Fix for gap issue with options panel

--- a/client/analysisui/multicontainer.css
+++ b/client/analysisui/multicontainer.css
@@ -3,4 +3,5 @@
     visibility: hidden;
     opacity: 0;
     height: 0px;
+    overflow: auto;
 }
